@@ -1,3 +1,10 @@
+2008-09-11  Daniel Kraft  <d@domob.eu>
+
+	PR fortran/36214
+	* gfortran.dg/boz_9.f90: Corrected test.
+	* gfortran.dg/boz_11.f90: New test.
+	* gfortran.dg/boz_12.f90: New test.
+
 2008-09-08  Daniel Kraft  <d@domob.eu>
 
 	PR fortran/37199
